# OVERWATCH

./: .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.html  README.md  fullStackServer.py  initOVERWATCH.sh  processRuns.py  readthedocs.yml  requirements.txt  runProcessRuns.py  runWebApp.py  setup.cfg  setup.py  startWSGIServer.sh  webApp.py
cmake/: FindAliRoot.cmake
config/: __init__.py  processingParams.py  processingParams.yaml  sensitiveParams_stub.py  serverParams.py  serverParams.yaml  serverParams_stub.py  sharedParams.py  wsgiConfig.ini  wsgiPDSF.ini  wsgiYale.ini
deploy/: .gitignore  configOVERWATCH_stub.sh  initOVERWATCH.sh  logrotate.conf  sharedFunctions.sh  start.py  updateDBUsers.py  wsgiPDSF.ini  wsgiYale.ini  zdaemon.conf  zeo.conf
deploy/docker/: Dockerfile  Dockerfile.build  Dockerfile.dev  README.md  jsRootPainterMoreDrawPaveFix.patch  pushToDockerHub.sh  setupServerConfig.sh  start.sh  supervisord.conf  uwsgi.ini
deploy/docker/baseImage/: Dockerfile
deploy/docker/buildScripts/: buildAliRoot.sh  buildXRootD.sh
deploy/docker/nginxConf/: gzip.conf
deploy/systemd/: overwatch.service
deploy/upstart/: overwatch.conf
doc/: Makefile  README.md  about.rst  baseReadme.md  conf.py  config.yaml  detectorPluginsReadme.md  documentation.rst  dqmReceiverReadme.md  index.rst  processingReadme.md  tests.md  trendingAndAlarms.md  webAppReadme.md
doc/_static/: overwatch.css
doc/_templates/: layout.html
doc/api/: overwatch.base.rst  overwatch.processing.detectors.rst  overwatch.processing.rst  overwatch.receiver.rst  overwatch.rst  overwatch.webApp.rst
doc/logo/: .gitignore  README.md
doc/planning/: planning.md  trendingAndAlarms.md
doc/source/: conf.py  config.rst  fullStackServer.rst  index.rst  linksBackToApp.rst  processRuns.rst  processRunsModules.detectors.rst  processRunsModules.rst  webApp.rst  webAppModules.rst
docker/: .gitignore  Dockerfile  Dockerfile.build  README.md  nginx.conf  pushToDockerHub.sh  supervisord.conf  uwsgi.ini
docker/buildScripts/: buildAlienCAs.sh  buildRoot.sh  buildXRootD.sh
exec/: .gitignore
overwatch/: README.md  __init__.py  version.py
overwatch/api/: README.md  __init__.py  config.yaml  fileAccess.py  fileToHTTP.py
overwatch/base/: README.md  __init__.py  config.py  config.yaml  dataHandling.py  dataTransfer.py  deploy.py  deployReference.yaml  replay.py  run.py  storageWrapper.py  updateDBUsers.py  utilities.py
overwatch/database/: README.md  __init__.py  abstractDatabase.py  config.yaml  databaseFactory.py  factoryMethod.py  mongoDatabase.py  mongoDatabaseFactory.py  utilities.py  zodbDatabase.py  zodbDatabaseFactory.py
overwatch/processing/: README.md  __init__.py  config.yaml  mergeFiles.py  pluginManager.py  processRuns.py  processingClasses.py  qa.py  run.py  trendingClasses.py  utilities.py
overwatch/processing/alarms/: README.md  aggregatingAlarm.py  alarm.py  andAlarm.py  boarderAlarm.py  changingValueAlarm.py  checkLastNAlarm.py  checkLastNAlarms.py  checkLastNValuesAlarm  checkLastNValuesAlarm.py  collectors.py  decreasingValueAlarm.py  example.py  increasingValueAlarm.py  orAlarm.py  registrator.py  test_alarms.py  totalTrendErrorAlarm.py
overwatch/processing/detectors/: DETECTORS.md  EMC.py  HLT.py  README.md  TPC.py  __init__.py
overwatch/processing/trending/: README.md  __init__.py  constants.py  info.py  manager.py  object.py
overwatch/receiver/: README.md  __init__.py  config.yaml  dqmReceiver.py  monitor.py  run.py
overwatch/webApp/: README.md  __init__.py  auth.py  config.yaml  flaskAssets.yaml  routing.py  run.py  trending.py  utilities.py  validation.py  webApp.py
overwatch/webApp/static/: .gitignore  bower.json  polymerComponents.html  shared.js  style.css
overwatch/webApp/templates/: contact.html  contactMainContent.html  error.html  errorMainContent.html  layout.html  loginMainContent.html  qaResult.html  qaResultDrawer.html  qaResultMainContent.html  rootFiles.html  rootFilesMainContent.html  runList.html  runListDrawer.html  runListMainContent.html  runPage.html  runPageDrawer.html  runPageMainContent.html  status.html  statusMainContent.html  trending.html  trendingDrawer.html  trendingMainContent.html
processRuns/: mergeFiles.py  processRuns.py  processingClasses.py  qa.py  utilities.py
processRuns/detectors/: EMC.py  TPC.py
processRunsModules/: generateHtml.py  generateWebPages.py  mergeFiles.py  processingClasses.py  qa.py  utilities.py
processRunsModules/detectors/: EMC.py  HLT.py  TPC.py  __init__.py
receiver/: .gitignore  CMakeLists.txt  README.md  cmakeCompilationNotes.md
receiver/cmake/: FindZeroMQ.cmake
receiver/src/: CMakeLists.txt  dqmReceiver.py  zmqReceive.cxx  zmqReceiver.cxx  zmqReceiver.h
receiver/src/AliZMQhelpers/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  zmqReceive.cxx  zmqReceiver.cxx  zmqReceiver.h
static/: .gitignore  bower.json  browserconfig.xml  manifest.json  polymerComponents.html  polymerComponents.vulcanized.html  shared.js  style.css
templates/: EMCoutput.html  contact.html  contactMainContent.html  error.html  errorMainContent.html  layout.html  login.html  loginMainContent.html  output.html  qa.html  qaDrawer.html  qaMainContent.html  qaResult.html  rootFiles.html  rootFilesMainContent.html  runList.html  runListDrawer.html  runListMainContent.html  runPage.html  runPageDrawer.html  runPageMainContent.html  statusMainContent.html
tests/: README.md  conftest.py
tests/base/: test_config.py  test_dataHandling.py  test_dataTransfer.py  test_deploy.py  test_replay.py  test_utilities.py
tests/processing/: test_processRuns.py
tests/receiver/: test_dqmReceiver.py  test_monitor.py
webApp/: __init__.py  auth.py  routing.py  validation.py  webApp.py
webApp/static/: .gitignore  polymerComponents.html  shared.js  style.css
webApp/templates/: contactMainContent.html  qaMainContent.html  rootFilesMainContent.html  runPageMainContent.html
webAppModules/: auth.py  routing.py  validation.py
(+41 files in other folders)
